--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@kobalte/core": "^0.13.7",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.0.11",
+    "@supabase/supabase-js": "^2.48.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "solid-js": "^1.9.2",
@@ -21,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "supabase": "^2.12.1",
     "tailwindcss": "^3.4.3"
   },
   "overrides": {
